--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^10.7.0",
+		"sveltefire": "^0.4.5"
+	}
 }
