--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltestrap/sveltestrap": "^6.2.2",
-		"firebase": "^10.8.0",
-		"sveltefire": "^0.4.5",
-		"sveltestrap": "^5.11.3"
+		"firebase": "^9.0.0",
+		"sveltefire": "^0.4.5"
 	}
 }
